--- a/.travis.yml
+++ b/.travis.yml
@@ -42,17 +42,12 @@ script:
     ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml
     --syntax-check
 
-  # Run the role/playbook with ansible-playbook.
-  - >
-    docker exec --tty "$(cat ${container_id})" env TERM=xterm
-    ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo
+  # Test role.
+  - 'docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/tests/${playbook}'
 
   # Run the role/playbook again, checking to make sure it's idempotent.
   - idempotence=$(mktemp)
-  - >
-    docker exec "$(cat ${container_id})"
-    ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml
-    | tee -a ${idempotence}
+  - docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/tests/${playbook} | tee -a ${idempotence}
   - >
     tail ${idempotence}
     | grep -q 'changed=0.*failed=0'
