--- a/tasks/rhel.yml
+++ b/tasks/rhel.yml
@@ -13,7 +13,7 @@
   delay: 10
   when: not yarn_repofile_result.stat.exists
 
-- name: Import EPEL GPG key.
+- name: Import YARN GPG key.
   rpm_key:
     key: "{{ yarn_rhel_repo_gpg_key_url }}"
     state: present
