--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Iuri Gagnidze
-  description: YARN repository for Ubuntu/RHEL
+  description: Install YARN package manager for Ubuntu/RHEL
   license: license (BSD, MIT)
 
   min_ansible_version: 2.1
@@ -18,6 +18,7 @@ galaxy_info:
   galaxy_tags:
     - packaging
     - yarn
+    - nodejs
     - repository
     - repo
 
