--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,8 @@
 - include: ubuntu.yml
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
+- name: Install NodeJS package
+  package: name=nodejs state=latest
+
 - name: Install YARN package manager
-  package: >
-    name=yarn
-    state=latest
+  package: name=yarn state=latest
