--- a/tasks/rhel.yml
+++ b/tasks/rhel.yml
@@ -20,5 +20,11 @@
     state: present
   when: not yarn_repofile_result.stat.exists
 
+- name: Install http-parser | Centos/Rhel 7
+  yum:
+    name: https://kojipkgs.fedoraproject.org//packages/http-parser/2.7.1/3.el7/x86_64/http-parser-2.7.1-3.el7.x86_64.rpm
+    state: present
+  when: ansible_distribution_major_version == '7'
+
 - name: Install NodeJS package for yarn dependency
   package: name=nodejs state=latest
