--- a/tasks/rhel.yml
+++ b/tasks/rhel.yml
@@ -25,6 +25,8 @@
     name: https://kojipkgs.fedoraproject.org//packages/http-parser/2.7.1/3.el7/x86_64/http-parser-2.7.1-3.el7.x86_64.rpm
     state: present
   when: ansible_distribution_major_version == '7'
+  register: http_parser_result
+  failed_when: http_parser_result.rc != 0 and ("Nothing to do" not in http_parser_result.stderr)
 
 - name: Install NodeJS package for yarn dependency
   package: name=nodejs state=latest
