--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,11 +8,10 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-      - trusty
       - xenial
+      - bionic
     - name: EL
       versions:
-      - 6
       - 7
 
   galaxy_tags:
