--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include: rhel.yml
-  when: ansible_distribution == 'CentOS' or ansible_family == 'RedHat' or ansible_distribution == 'Amazon'
+  when: ansible_distribution == 'CentOS' or ansible_os_family == 'RedHat' or ansible_distribution == 'Amazon'
 
 - include: ubuntu.yml
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
